# text-to-speech

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml
.chalice/: app-policy.json  config.json
.chalice/deployed/: dev.json  test.json
chalicelib/entities/: cloud_convert.py  engine_config.py  messages.py  murf_ai.py  play_ht.py  secrets.py
chalicelib/utils/: request_templates.py
src/: app.py
src/.chalice/: config.json
src/chalicelib/entities/: user_profile.py
src/chalicelib/utils/: feature_toggles.py  responder.py
terraform/dev/: backend.tf  main.tf  version.tf
terraform/modules/: main.tf  variables.tf
tests/: test_convert_video_complete.py  test_convert_video_create.py  test_download.py  test_hello_world.py  test_murf_ai.py  test_play_ht_create.py  test_play_ht_status.py  test_real.py
tests/samples/: test1.json
tests/samples/murf/: test1.json
tests/samples/play/: play1.json
